// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the numbers the Fitness hub shows now a woman, same body, same goal 1`] = `
{
  "bmr": 1533,
  "calorieTarget": 1948,
  "hasMetrics": true,
  "macros": {
    "carbG": 214,
    "fatG": 58,
    "proteinG": 143,
  },
  "missing": [],
  "nutritionGoal": "lose",
  "proteinPerKg": 1.9,
  "tdee": 2376,
}
`;

exports[`the numbers the Fitness hub shows now athletic, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2930,
    "hasMetrics": true,
    "macros": {
      "carbG": 400,
      "fatG": 88,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 2336,
    "hasMetrics": true,
    "macros": {
      "carbG": 292,
      "fatG": 70,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2633,
    "hasMetrics": true,
    "macros": {
      "carbG": 346,
      "fatG": 79,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 2039,
    "hasMetrics": true,
    "macros": {
      "carbG": 238,
      "fatG": 61,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 3228,
    "hasMetrics": true,
    "macros": {
      "carbG": 454,
      "fatG": 97,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now buildMuscle, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 3223,
    "hasMetrics": true,
    "macros": {
      "carbG": 438,
      "fatG": 97,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 2569,
    "hasMetrics": true,
    "macros": {
      "carbG": 319,
      "fatG": 77,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2896,
    "hasMetrics": true,
    "macros": {
      "carbG": 378,
      "fatG": 87,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 2242,
    "hasMetrics": true,
    "macros": {
      "carbG": 260,
      "fatG": 67,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 3550,
    "hasMetrics": true,
    "macros": {
      "carbG": 497,
      "fatG": 107,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now fatLoss, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2403,
    "hasMetrics": true,
    "macros": {
      "carbG": 296,
      "fatG": 72,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 1915,
    "hasMetrics": true,
    "macros": {
      "carbG": 208,
      "fatG": 57,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2159,
    "hasMetrics": true,
    "macros": {
      "carbG": 251,
      "fatG": 65,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 1672,
    "hasMetrics": true,
    "macros": {
      "carbG": 163,
      "fatG": 50,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 2678,
    "hasMetrics": true,
    "macros": {
      "carbG": 347,
      "fatG": 80,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now leanDefine, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2403,
    "hasMetrics": true,
    "macros": {
      "carbG": 281,
      "fatG": 72,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 1915,
    "hasMetrics": true,
    "macros": {
      "carbG": 193,
      "fatG": 57,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2159,
    "hasMetrics": true,
    "macros": {
      "carbG": 236,
      "fatG": 65,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 1672,
    "hasMetrics": true,
    "macros": {
      "carbG": 148,
      "fatG": 50,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 2678,
    "hasMetrics": true,
    "macros": {
      "carbG": 332,
      "fatG": 80,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now sex "other", which the formula now refuses rather than resolves 1`] = `
{
  "bmr": null,
  "calorieTarget": null,
  "hasMetrics": true,
  "macros": null,
  "missing": [
    "sex",
  ],
  "nutritionGoal": "lose",
  "proteinPerKg": 1.9,
  "tdee": null,
}
`;
